Fixed display issues on iphone 4

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -5,9 +5,10 @@ display:flex;
 }
 h2 > #status {
 	font-size:14vw;
-	width:100%;
-	text-align:center;
-	vertical-align: middle;
+    position:relative;
+    top:25%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #displayName{
@@ -99,8 +100,8 @@ h2{
 }
 
 body{
-    /* text-align:center;
-    margin:0px;
+    text-align:center;
+    /* margin:0px;
     background:#000;
     color:#fff; */
     font-family: "Microstyle Extended ATT", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica;
